--- a/fakebook.tex
+++ b/fakebook.tex
@@ -35,7 +35,7 @@
   \expandafter\preLilyPondExample
 \fi
 \def\lilypondbook{}%
-\input{b4/lily-406180d8-systems.tex}
+\input{0c/lily-e25091a8-systems.tex}
 \ifx\postLilyPondExample \undefined
 \else
   \expandafter\postLilyPondExample
@@ -54,7 +54,7 @@
   \expandafter\preLilyPondExample
 \fi
 \def\lilypondbook{}%
-\input{84/lily-3ec4eb5b-systems.tex}
+\input{4c/lily-27c01d5a-systems.tex}
 \ifx\postLilyPondExample \undefined
 \else
   \expandafter\postLilyPondExample
@@ -111,7 +111,26 @@
   \expandafter\preLilyPondExample
 \fi
 \def\lilypondbook{}%
-\input{d7/lily-6d9f154c-systems.tex}
+\input{28/lily-c2061a0d-systems.tex}
+\ifx\postLilyPondExample \undefined
+\else
+  \expandafter\postLilyPondExample
+\fi
+}
+\end{minipage}
+
+\noindent
+\begin{minipage}{\columnwidth}
+%\index{}
+{%
+\parindent 0pt
+\noindent
+\ifx\preLilyPondExample \undefined
+\else
+  \expandafter\preLilyPondExample
+\fi
+\def\lilypondbook{}%
+\input{ea/lily-b9ecae01-systems.tex}
 \ifx\postLilyPondExample \undefined
 \else
   \expandafter\postLilyPondExample
