added bransles, changed formatting of title pages

--- a/titles/chapter_basse.tex
+++ b/titles/chapter_basse.tex
@@ -15,4 +15,25 @@
 Here is some information about basse dance. It is not especially informative, but I need to fill some space, and I don't want to actually have to do any research. I am pretty good at avoiding research.
 
 
+%\newcommand\nbvspace[1][3]{\vspace*{\stretch{#1}}}
+%\newcommand\nbstretchyspace{\spaceskip0.5em plus 0.25em minus 0.25em}
+%\newcommand{\nbtitlestretch}{\spaceskip0.6em}
+
+%\begin{center}
+
+%\fontspec[Scale=2.8]{IM FELL English PRO}
+%{\nbtitlestretch 
+%Basse Dance\\
+%}
+
+%\nbvspace[0.2]
+
+%\end{center}
+
+%\fontspec[Scale=1]{IM FELL English PRO}
+%Here is some information about basse dance. It is not especially informative, but I need to fill some space, and I don't want to actually have to do any research. I am pretty good at avoiding research.
+
+%\nbvspace[5]
+
+
 \end{document}
