--- a/titles/title.tex
+++ b/titles/title.tex
@@ -16,7 +16,7 @@
 \newcommand{\nbtitlestretch}{\spaceskip0.6em}
 \pagestyle{empty}
 \begin{center}
-\bfseries
+%\bfseries
 
 
 \fontspec[Scale=3]{IM FELL English PRO}
@@ -59,9 +59,13 @@ Written in English by the right worthie and famous {\it \fontspec[Scale=1.5]{IM 
 {\it
 \fontspec[Scale=1.5]{IM FELL English PRO}
 %And now this third Edition, newly corrected and \\amended
-First Edition
+%First Edition
+Draft
 }
 
+\nbvspace[1]
+\fontspec[Scale=20]{IM FELL English PRO}
+ %
 %\includegraphics[width=1.5in]{./graphics/pic37}
 \nbvspace[3]
 
