--- a/titles/intro.tex
+++ b/titles/intro.tex
@@ -1,6 +1,7 @@
 \documentclass{book}
 \usepackage{graphicx}
 \usepackage{fontspec}
+
 \usepackage[margin=1in]{geometry}
 \setmainfont[Ligatures=Historic,Numbers=OldStyle]{IM FELL English PRO}
 
@@ -11,5 +12,25 @@
 \chapter*{Introduction}
 Here is an introduction. You should feel introduced to this fakebook. If you do not feel introduced, please close the book, reopen it, and reread the introduction.
 
+%\newcommand\nbvspace[1][3]{\vspace*{\stretch{#1}}}
+%\newcommand\nbstretchyspace{\spaceskip0.5em plus 0.25em minus 0.25em}
+%\newcommand{\nbtitlestretch}{\spaceskip0.6em}
+%\begin{center}
+
+%\fontspec[Scale=2.8]{IM FELL English PRO}
+%{\nbtitlestretch %\huge
+%Introduction\\
+%}
+
+%\nbvspace[0.2]
+
+%\end{center}
+
+%\fontspec[Scale=1]{IM FELL English PRO}
+%Here is an introduction. You should feel introduced to this fakebook. If you do not feel introduced, please close the book, reopen it, and reread the introduction.
+
+
+
+%\nbvspace[5]
 
 \end{document}
