finished title page, added introduction

--- a/titles/title.tex
+++ b/titles/title.tex
@@ -22,52 +22,56 @@
 \fontspec[Scale=3]{IM FELL English PRO}
 A
 
-\nbvspace[0.2]
+\nbvspace[10]
 
 \fontspec[Scale=2.8]{IM FELL English PRO}
 {\nbtitlestretch\huge
 F A K E B O O K \\
 }
 
-\nbvspace[0.2]
+\nbvspace[10]
 
 \fontspec[Scale=3]{IM FELL English PRO}
 FOR THE PLAYING OF\\
 
-\nbvspace[0.2]
+\nbvspace[10]
 
 \fontspec[Scale=2]{IM FELL English PRO}
 RENAISSANCE DANCE MUSIC\\
 
-\nbvspace[0.5]
+\nbvspace[5]
 
 \fontspec[Scale=3]{IM FELL FLOWERS 1}
-KLLLLLLM
+%KLLLLLLM
 
-\nbvspace[0.5]
+%\nbvspace[1]
 
+{ %\it 
 \fontspec[Scale=2]{IM FELL English PRO}
-Containing music for many dances of the\\ 15th and 16th centuries
+Wherein is set down music for many dances \\of the 15th and 16th centuries}
 
-\nbvspace[0.2]
+\nbvspace[5]
+
+%\fontspec[Scale=1]{IM FELL English PRO}
+%Containing the melody and chords
+
+%\nbvspace[1]
 
 \fontspec[Scale=1.5]{IM FELL English PRO}
-Written in English by the right worthie and famous {\it \fontspec[Scale=1.5]{IM FELL English PRO} Author}\\[0.5em]
+Written in English by the right worthie and famous\\ {\it \fontspec[Scale=1.5]{IM FELL English PRO} Meg Raynsford and Aaron Drummond}\\[0.5em]
 
 
 \nbvspace[1]
 {\it
-\fontspec[Scale=1.5]{IM FELL English PRO}
+\fontspec[Scale=2]{IM FELL English PRO}
 %And now this third Edition, newly corrected and \\amended
 %First Edition
 Draft
 }
 
 \nbvspace[1]
-\fontspec[Scale=20]{IM FELL English PRO}
- %
-%\includegraphics[width=1.5in]{./graphics/pic37}
-\nbvspace[3]
+\includegraphics[width=01\textwidth]{kemp_jig.jpg}
+\nbvspace[1]
 
 
 \fontspec[Scale=2]{IM FELL English PRO}
@@ -76,7 +80,7 @@ HAMILTON\\
 \nbvspace[0.15]
 
 \fontspec[Scale=1.5]{IM FELL English PRO}
-Printed by Emma Badowski,\\
+%Printed by Emma Badowski,\\
 \nbvspace[0.1]
 \fontspec[Scale=2]{IM FELL English PRO}
 2 0 1 4.
